# Quill

./: .env.sample  .gitignore  README.md  config.toml.sample  future_features.md  pyproject.toml  requirements.txt
.cursor/: plan.md
desktop/: integrations.js  main.js  package-lock.json  package.json  preload.js  test_desktop_e2e.mjs  test_ux_verify.mjs
desktop/renderer/: app.js  cowork.js  index.html  multi-agent.js  quill-features.js  styles.css
desktop/renderer/modules/: agentPanel.js  debug.js  editor.js  palette.js  scm.js  settings.js  state.js  terminals.js  util.js  workspaces.js
desktop/scripts/: copy-vendor.mjs
docs/: CURSOR_PARITY_PLAN.md  terminal-pane-fix-plan.md
quill/: __init__.py  cli.py  desktop_launcher.py  tools.py  ui.py
scripts/: build_binary.py  install_quill.py  pyinstaller_entry.py  verify_all.py
sexyjarvis/: __init__.py  __main__.py  agent.py  caveman.py  cli.py  config.py  cursor_backend.py  cursor_patch.py  external_tools.py  extras.py  global_env.sample  hooks.py  ignore.py  init_cmd.py  llm_router.py  local_llm.py  mcp_client.py  memory.py  prompts.py  rtk.py  telemetry.py  tools.py  ui.py  watcher.py
sexyjarvis/voice/: __init__.py  capture.py  ptt.py  settings.py  stt.py  tts.py
